--- a/maquetacion/src/theme/_colors.scss
+++ b/maquetacion/src/theme/_colors.scss
@@ -62,7 +62,6 @@ $accent: (
     A700: #ffffff,
   ),
 );
-
 $warn: (
   50: #f9e8e8,
   100: #f1c7c7,
@@ -95,7 +94,6 @@ $warn: (
     A700: #ffffff,
   ),
 );
-
 $success: (
   50: #f2f9e7,
   100: #ddefc4,
@@ -128,7 +126,6 @@ $success: (
     A700: #ffffff,
   ),
 );
-
 $warning: (
   50: #fff0e0,
   100: #fedab3,
@@ -161,7 +158,6 @@ $warning: (
     A700: #ffffff,
   ),
 );
-
 $info: (
   50: #e6f3f8,
   100: #c0e2ee,
@@ -194,7 +190,6 @@ $info: (
     A700: #ffffff,
   ),
 );
-
 $dark-primary: (
   50: #eaf5f9,
   100: #cae6f0,
@@ -387,6 +382,22 @@ $dark-warning: (
     A700: #ffffff,
   ),
 );
+$grey:(
+  50: #FAFBFF,
+  100:  #F4F6FA,
+  200: #EDEFF5,
+  300:   #E6E8F0,
+  400:  #D8DAE5,
+  500: #C1C4D6,
+  600:  #8F95B2,
+  700: #696F8C,
+  800: #474D66,
+  900:  #101840,
+  A100: #D8DAE5,
+  A200:  #C1C4D6,
+  A400:  #696F8C,
+  A700:  #101840,
+);
 $other: (
   divider: rgba(16, 24, 64, 0.12),
   outlinedBorder: rgba(16, 24, 64, 0.23),
@@ -396,10 +407,18 @@ $other: (
   snackbar: #1b344c,
   ratingActive: #ffb400,
 );
-
 $background: (
   paper: #fbfbfb,
   default: #f1f0ee,
 );
 $light-background-default: #fbfbfb;
 $dark-background-default: #1a1a1b;
+.mat-mdc-fab.mat-accent {
+  & span.mat-mdc-button-touch-target, &:not(.mdc-fab--extended),  &.mat-mdc-extended-fab, .mat-icon{
+    --mdc-fab-icon-color: #ffffff;
+    --mat-mdc-fab-color: #ffffff;
+  }
+}
+.bg-header{
+  background-color: #ffffff;
+}
