--- a/maquetacion/src/theme/_theme.scss
+++ b/maquetacion/src/theme/_theme.scss
@@ -2,12 +2,37 @@
 @use "@material/textfield" with($minimum-height-for-filled-label:32px, $minimum-height:32px);
 @use "@angular/material" as mat;
 @use "./mixins.scss" as variants;
-@import "./typography";
+@import '@angular/material/theming';
+@import "./elevations";
 @import "./colors";
+@import "./typography";
 @import "./sizes";
 
 @include mat.core();
-
+$light-theme-background: (
+  status-bar: map.get($grey,300),
+  app-bar:    map.get($grey,100),
+  background: map.get($grey,50),
+  card:       #fff,
+  dialog:     #fbfbfb,
+  disabled-button: rgba(16, 24, 64, 0.12),
+  selected-button:  map.get($grey,300),
+  selected-disabled-button: map_get($grey, 400),
+  disabled-button-toggle:  map.get($grey,200),
+  unselected-chip: map.get($grey,300),
+  disabled-list-option: map.get($grey,200),
+  tooltip: map.get($grey, 700),
+);
+$light-theme-foreground: (
+  base:              black,
+  divider:           rgba(16, 24, 64, 0.12),
+  dividers:          rgba(16, 24, 64, 0.12),
+  disabled:          rgba(16, 24, 64, 0.26),
+  disabled-button:   rgba(16, 24, 64, 0.12),
+  disabled-text:     rgba(16, 24, 64, 0.26),
+  hint-text:         map.get($grey,800),
+  secondary-text:    rgba(black, 0.54),
+);
 //LIGHT MODE COLORS
 $primary-color: mat.define-palette($primary);
 $accent-color: mat.define-palette($accent);
@@ -15,7 +40,6 @@ $warn-color: mat.define-palette($warn);
 $success-color: mat.define-palette($success);
 $warning-color: mat.define-palette($warning);
 $info-color: mat.define-palette($info);
-
 //DARK MODE COLOR
 $dark-primary-color: mat.define-palette($dark-primary);
 $dark-accent-color: mat.define-palette($dark-accent);
@@ -23,7 +47,6 @@ $dark-warn-color: mat.define-palette($dark-warn);
 $dark-success-color: mat.define-palette($dark-success);
 $dark-info-color: mat.define-palette($dark-info);
 $dark-warning-color: mat.define-palette($dark-warning);
-
 // DEFINITION THEME
 $light-background-default: #fbfbfb;
 $dark-background-default: #1a1a1b;
@@ -62,7 +85,6 @@ $dark-theme: mat.define-dark-theme(
     density: 0,
   )
 );
-
 $dark-theme: map.deep-merge(
   $dark-theme,
   (
@@ -81,7 +103,18 @@ $light-theme-variants: (
   info: $info-color,
   warning: $warning-color,
 );
-
+@function _create-wonky-theme($primary-color, $accent-color, $warn-color,) {
+  @return (
+    primary: $primary-color,
+    accent: $accent-color,
+    warn: $warn-color,
+    is-dark: false,
+    foreground: $light-theme-foreground,
+    background: $light-theme-background,
+  );
+}
+$foregroun-background-palletes:_create-wonky-theme($primary-color,$accent-color,$warn-color);
 @include mat.core-theme($light-theme);
 @include mat.all-component-themes($light-theme);
 @include variants.color($light-theme, $light-theme-variants);
+@include angular-material-theme($foregroun-background-palletes);
