--- a/maquetacion/src/app/app.component.scss
+++ b/maquetacion/src/app/app.component.scss
@@ -32,9 +32,10 @@
 .full-height {
   height: 100%;
 }
-.min-width{
+.min-width {
   width: 10rem;
-}.medio {
+}
+.medio {
   display: flex;
   width: 100%;
   align-items: center;
